Git_WGBH_QC/src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Account_For_Reports__c</fullName>
        <formula>Contact.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>Contact.Account.Staff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>HYPERLINK( &apos;/&apos; + Contact.AccountId  , Contact.Account.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ask_Amount_1__c</fullName>
        <description>First ask amount associated with the solicitation of this donor/campaign.</description>
        <inlineHelpText>Enter the first ask amount associated with the solicitation of this donor to this campaign.</inlineHelpText>
        <label>Ask Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ask_Amount_2__c</fullName>
        <description>First ask amount associated with the solicitation of this donor/campaign.</description>
        <inlineHelpText>Enter the secondary ask amount associated with the solicitation of this donor to this campaign.</inlineHelpText>
        <label>Ask Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ask_Amount_3__c</fullName>
        <description>Third Ask amount associated with the solicitation of this donor/campaign.</description>
        <inlineHelpText>Enter the third ask amount associated with the solicitation of this donor to this campaign.</inlineHelpText>
        <label>Ask Amount 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ask_Readiness__c</fullName>
        <label>Ask Readiness</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Report__c</fullName>
        <label>Campaign Member Report</label>
        <referenceTo>Campaign_Member_Report__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Amount__c</fullName>
        <label>Expected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Rating__c</fullName>
        <formula>CASE(
 Contact.Account.External_Rating__c,
 &quot;A&quot;, &quot;A&quot;,
&quot;B&quot;,&quot;B&quot;,
&quot;C&quot;,&quot;C&quot;,
&quot;D&quot;,&quot;D&quot;,
&quot;E&quot;,&quot;E&quot;,
&quot;F&quot;,&quot;F&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genre__c</fullName>
        <label>Genre</label>
        <picklist>
            <picklistValues>
                <fullName>Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Childrens Programming</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Gift_Amount__c</fullName>
        <formula>Giving__r.Giving_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gift Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Giving__c</fullName>
        <label>Giving</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Household_Campaign_Members__c</fullName>
        <description>Households give along with contacts</description>
        <inlineHelpText>Households are added to a campaign for tracking the effectiveness of the campaign giving.</inlineHelpText>
        <label>Household Campaign Members</label>
        <referenceTo>Household__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Rating__c</fullName>
        <formula>CASE(
  Contact.Internal_Rating__c ,
 &quot;1&quot;, &quot;1&quot;,
&quot;2&quot;,&quot;2&quot;,
&quot;3&quot;,&quot;3&quot;,
&quot;4&quot;,&quot;4&quot;,
&quot;5&quot;,&quot;5&quot;,
&quot;6&quot;,&quot;6&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moves_Management_Stage__c</fullName>
        <label>Moves Management Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identification</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitation/Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pledged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Go Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intention</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Address__c</fullName>
        <formula>HYPERLINK( &apos;/&apos; + Contact.Account.Preferred_Address__r.Id  ,  Contact.Account.Preferred_Address__r.Name  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferred Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Solicitor__c</fullName>
        <label>Primary Solicitor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Show__c</fullName>
        <inlineHelpText>TV/Radio Program Show</inlineHelpText>
        <label>TV/Radio Program/Show</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Closed Captioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discriptive Video Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Curriculm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fund Production</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Stretch_Amount__c</fullName>
        <label>Stretch Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Standard page layout used by all groups except for Major Donors</description>
        <label>Standard</label>
    </recordTypes>
</CustomObject>